# scrapbox2

./: .gitignore  README.md
algo_sample/: ReadMe.md
asm_sample/: ReadMe.md
c_sample/pytorch_cpp/: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  setup_torch.sh
ml_sample/cls_method_sample/: README.md  config.yml  pyproject.toml
ml_sample/cls_method_sample/cls_method_sample/: config.py  main.py  model.py  predictor.py
ml_sample/cls_method_sample/tests/: test_cls_method_sample.py
ml_sample/iter_dataset_shuffle/: README.md  pyproject.toml
ml_sample/iter_dataset_shuffle/iter_dataset_shuffle/: main.py  my_dataset.py
ml_sample/iter_dataset_shuffle/tests/: test_iter_dataset_shuffle.py
ml_sample/sample_annoy_text_classifier/: README.md  pyproject.toml
ml_sample/sample_annoy_text_classifier/sample_annoy_text_classifier/: main.py  news.py  news_interator.py  nn_classifier.py  text_tokenizer.py
ml_sample/sample_annoy_text_classifier/tests/: test_sample_annoy_text_classifier.py
ml_sample/sample_cat_boost/: .gitignore  README.md  pyproject.toml
ml_sample/sample_cat_boost/sample_cat_boost/: main.py
ml_sample/sample_cat_boost/tests/: test_sample_cat_boost.py
ml_sample/sample_category_encoders/: README.md  pyproject.toml
ml_sample/sample_category_encoders/sample_category_encoders/: main.py
ml_sample/sample_category_encoders/tests/: test_sample_category_encoders.py
ml_sample/sample_ensemble_nlp/: README.md  download.sh  pyproject.toml
ml_sample/sample_ensemble_nlp/sample_ensemble_nlp/: .gitignore  main.py
ml_sample/sample_ensemble_nlp/tests/: test_sample_ensemble_nlp.py
ml_sample/sample_gridsearch_pipeline/: .gitignore  README.md  pyproject.toml
ml_sample/sample_gridsearch_pipeline/sample_gridsearch_pipeline/: main.py
ml_sample/sample_gridsearch_pipeline/tests/: test_sample_gridsearch_pipeline.py
ml_sample/sample_lr_with_likelihood/: README.md  pyproject.toml
ml_sample/sample_lr_with_likelihood/sample_lr_with_likelihood/: main.py
ml_sample/sample_lr_with_likelihood/tests/: test_sample_lr_with_likelihood.py
ml_sample/sample_lsa_lsi/: README.md  pyproject.toml
ml_sample/sample_lsa_lsi/sample_lsa_lsi/: main.py
ml_sample/sample_lsa_lsi/tests/: test_sample_lsa_lsi.py
ml_sample/sample_sklearn_dcg/: README.md  pyproject.toml
ml_sample/sample_sklearn_dcg/sample_sklearn_dcg/: main.py
ml_sample/sample_sklearn_dcg/tests/: test_sample_sklearn_dcg.py
ml_sample/torch_ltr/: README.md  pyproject.toml
ml_sample/torch_ltr/tests/: test_torch_ltr.py
ml_sample/torch_ltr/torch_ltr/: dataset.py  loss.py  main.py  model.py
ml_sample/under_sampling_check/: README.md  pyproject.toml
ml_sample/under_sampling_check/tests/: test_under_sampling_check.py
ml_sample/under_sampling_check/under_sampling_check/: main.py
nlp_sample/sample_ma_mecab/: README.md  pyproject.toml
nlp_sample/sample_ma_mecab/sample_ma_mecab/: main.py
nlp_sample/sample_ma_mecab/tests/: test_sample_ma_mecab.py
nlp_sample/wordnet_sample_code/: README.md  pyproject.toml
nlp_sample/wordnet_sample_code/tests/: test_wordnet_sample_code.py
nlp_sample/wordnet_sample_code/wordnet_sample_code/: main.py
py_sample/fastapi_logger/: README.md  pyproject.toml
py_sample/fastapi_logger/fastapi_logger/: main.py  module.py
py_sample/fastapi_logger/tests/: test_fastapi_logger.py
py_sample/fastapi_websocket/: README.md  pyproject.toml
py_sample/fastapi_websocket/fastapi_websocket/: main.py
py_sample/fastapi_websocket/tests/: test_fastapi_websocket.py
py_sample/fix_structure_w2v_train/: .gitignore  pyproject.toml
py_sample/fix_structure_w2v_train/sample_w2v/: main.py
py_sample/hidden_future_warnings/: README.md  pyproject.toml
py_sample/hidden_future_warnings/hidden_future_warnings/: check_warnings.py
py_sample/hidden_future_warnings/tests/: test_hidden_future_warnings.py
py_sample/multi_processing_benchmarks/: README.md  pyproject.toml
py_sample/multi_processing_benchmarks/multi_processing_benchmarks/: main.py  math_functions.py  modules.py
py_sample/multi_processing_benchmarks/tests/: test_multi_processing_benchmarks.py
py_sample/poet_docker/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
py_sample/poet_docker/poet_docker/: app.py
py_sample/poet_docker/tests/: test_poet_docker.py
py_sample/sample_falconn/: README.md  pyproject.toml
py_sample/sample_falconn/sample_falconn/: main.py
py_sample/sample_falconn/tests/: test_sample_falconn.py
py_sample/sample_optuna_sklearn/: README.md  pyproject.toml
py_sample/sample_optuna_sklearn/sample_optuna_sklearn/: main.py  objective.py
py_sample/sample_optuna_sklearn/tests/: test_sample_optuna_sklearn.py
py_sample/sample_wordcloud/: .gitignore  README.md  download.sh  pyproject.toml
py_sample/sample_wordcloud/sample_wordcloud/: main.py  text_iterator.py  text_tokenizer.py
py_sample/sample_wordcloud/tests/: test_sample_wordcloud.py
py_sample/thread_try_expect/: README.md  pyproject.toml
py_sample/thread_try_expect/tests/: test_thread_try_expect.py
py_sample/thread_try_expect/thread_try_expect/: main.py
rec_sample/improve2_memory_base/: pyproject.toml
rec_sample/improve2_memory_base/improve2_memory_base/: main.py
rec_sample/improve2_memory_base/tests/: test_improve2_memory_base.py
rec_sample/nmf_svd_sample/: README.md  pyproject.toml
rec_sample/nmf_svd_sample/nmf_svd_sample/: main.py
rec_sample/nmf_svd_sample/tests/: test_nmf_svd_sample.py
rec_sample/prob_matrix_factorization/: README.md  pyproject.toml
rec_sample/prob_matrix_factorization/prob_matrix_factorization/: main.py
rec_sample/prob_matrix_factorization/tests/: test_prob_matrix_factorization.py
rec_sample/ranking_evaluation_metrics/: README.md  pyproject.toml
rec_sample/ranking_evaluation_metrics/data/: preferred_items.csv
rec_sample/ranking_evaluation_metrics/ranking_evaluation_metrics/: main.py
rec_sample/ranking_evaluation_metrics/tests/: test_ranking_evaluation_metrics.py
rec_sample/sample_lightfm/: README.md  pyproject.toml
rec_sample/sample_lightfm/sample_lightfm/: main.py
(+901 files in other folders)
