[tool.poetry]
name = "sample_annoy_text_classifier"
version = "0.1.0"
description = ""
authors = ["wararaki <ky7.ott.w@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.2"
annoy = "^1.16"
janome = "^0.3.10"
numpy = "^1.18"
tqdm = "^4.45"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
