[tool.poetry]
name = "sample_cat_boost"
version = "0.1.0"
description = ""
authors = ["wararaki"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
catboost = "^0.20.2"
scikit-learn = "^0.22.1"
numpy = "^1.18"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
