[tool.poetry]
name = "sample_sklearn_dcg"
version = "0.1.0"
description = ""
authors = ["wararaki"]

[tool.poetry.dependencies]
python = "^3.7"
lightfm = "^1.15"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
