[tool.poetry]
name = "fastapi_websocket"
version = "0.1.0"
description = ""
authors = ["wararaki"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.49.0"
uvicorn = "^0.11.3"
aiofiles = "^0.4.0"
jinja2 = "^2.11"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
