[tool.poetry]
name = "sample_w2v"
version = "0.1.0"
description = ""
authors = ["wararaki"]

[tool.poetry.dependencies]
python = "^3.7"
gensim = "^3.8"
janome = "^0.3.10"
BeautifulSoup4 = "^4.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
