[tool.poetry]
name = "sample_wordcloud"
version = "0.1.0"
description = ""
authors = ["wararaki <ky7.ott.w@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wordcloud = "^1.6"
BeautifulSoup4 = "^4.8"
janome = "^0.3.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
