[tool.poetry]
name = "improve2_memory_base"
version = "0.1.0"
description = ""
authors = ["wararaki"]

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.4"
pandas = "^0.25.3"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
