[tool.poetry]
name = "prob_matrix_factorization"
version = "0.1.0"
description = ""
authors = ["wararaki"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
scipy = "^1.4"
pandas = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
